--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -27,14 +27,13 @@
 </style>
 
 <body>
-
-    <div class="layout">
-        <form action="/board/writepro" method="post">
-            <input name="title" type="text">
-            <textarea name="content"></textarea>
-            <button type="submit">작성</button>
-        </form>
-    </div>
-
+<div class = "layout">
+    <form action="/board/writepro" method ="post" enctype="multipart/form-data">
+        <input name = "title" type = "text">
+        <textarea name = "content"></textarea>
+        <input type="file" name="file">
+        <button type="submit">작성</button>
+    </form>
+</div>
 </body>
 </html>
